rasn-compiler-tests/tests/snapshots/parse_test__parses_modules@itu-t_x_x525_2008_DirectoryShadowAbstractService.asn1.snap
---
source: rasn-compiler-tests/tests/parse_test.rs
input_file: rasn-compiler-tests/tests/modules/itu-t_x_x525_2008_DirectoryShadowAbstractService.asn1
---
Error matching ASN syntax at while parsing:
    ╭─[line 53, column 2]
    │
    │ 
 52 │  -- shadow operational binding
 53 │  shadowOperationalBinding OPERATIONAL-BINDING ::= { ◀▪▪▪▪▪▪▪▪▪▪ FAILED AT THIS LINE
 54 │    AGREEMENT             ShadowingAgreementInfo
 55 │    APPLICATION CONTEXTS
 56 │      {{shadowSupplierInitiatedAC
 57 │        APPLIES TO  {All-operations-supplier-initiated}} |
 58 │        {shadowConsumerInitiatedAC
 59 │         APPLIES TO  {All-operations-consumer-initiated}}}
 60 │    ASYMMETRIC ROLE-A
 61 │      { -- shadow supplier roleESTABLISHMENT-INITIATOR  TRUE
 62 │                               ESTABLISHMENT-PARAMETER  NULL
 63 │                               MODIFICATION-INITIATOR   TRUE
 64 │                               TERMINATION-INITIATOR    TRUE}
 65 │    ROLE-B
 66 │      { -- shadow consumer roleESTABLISHMENT-INITIATOR  TRUE
 67 │                               ESTABLISHMENT-PARAMETER  NULL
 68 │                               MODIFICATION-INITIATOR   TRUE
 69 │                               MODIFICATION-PARAMETER   ModificationParameter
 70 │                               TERMINATION-INITIATOR    TRUE}
 71 │    ID                    id-op-binding-shadow
 72 │  }
 74 │  -- types
    │
────╯
