rasn-compiler-tests/tests/snapshots/parse_test__parses_modules@itu-t_x_x525_2012_DirectoryShadowAbstractService.asn1.snap
---
source: rasn-compiler-tests/tests/parse_test.rs
input_file: rasn-compiler-tests/tests/modules/itu-t_x_x525_2012_DirectoryShadowAbstractService.asn1
---
Error matching ASN syntax at while parsing:
    ╭─[line 59, column 2]
    │
    │ 
 58 │  -- shadow operational binding
 59 │  shadowOperationalBinding OPERATIONAL-BINDING ::= { ◀▪▪▪▪▪▪▪▪▪▪ FAILED AT THIS LINE
 60 │    AGREEMENT             ShadowingAgreementInfo
 61 │    APPLICATION CONTEXTS
 62 │      {{shadowSupplierInitiatedAC
 63 │        APPLIES TO  {All-operations-supplier-initiated}} |
 64 │        {shadowConsumerInitiatedAC
 65 │         APPLIES TO  {All-operations-consumer-initiated}}}
 66 │    ASYMMETRIC ROLE-A
 67 │      { -- shadow supplier roleESTABLISHMENT-INITIATOR  TRUE
 68 │                               ESTABLISHMENT-PARAMETER  NULL
 69 │                               MODIFICATION-INITIATOR   TRUE
 70 │                               TERMINATION-INITIATOR    TRUE}
 71 │    ROLE-B
 72 │      { -- shadow consumer roleESTABLISHMENT-INITIATOR  TRUE
 73 │                               ESTABLISHMENT-PARAMETER  NULL
 74 │                               MODIFICATION-INITIATOR   TRUE
 75 │                               MODIFICATION-PARAMETER   ModificationParameter
 76 │                               TERMINATION-INITIATOR    TRUE}
 77 │    ID                    id-op-binding-shadow
 78 │  }
 80 │  -- types
    │
────╯
