rasn-compiler-tests/tests/snapshots/parse_test__parses_modules@itu-t_x_x525_2016_DirectoryShadowAbstractService.asn1.snap
---
source: rasn-compiler-tests/tests/parse_test.rs
input_file: rasn-compiler-tests/tests/modules/itu-t_x_x525_2016_DirectoryShadowAbstractService.asn1
---
Error matching ASN syntax at while parsing:
    ╭─[line 63, column 2]
    │
    │ 
 61 │  -- shadow operational binding
 63 │  shadowOperationalBinding OPERATIONAL-BINDING ::= { ◀▪▪▪▪▪▪▪▪▪▪ FAILED AT THIS LINE
 64 │    AGREEMENT             ShadowingAgreementInfo
 65 │    APPLICATION CONTEXTS
 66 │      {{shadowSupplierInitiatedAC
 67 │        APPLIES TO  {All-operations-supplier-initiated}} |
 68 │      {shadowConsumerInitiatedAC
 69 │        APPLIES TO  {All-operations-consumer-initiated}}}
 70 │    ASYMMETRIC
 71 │      ROLE-A { -- shadow supplier role
 72 │        ESTABLISHMENT-INITIATOR  TRUE
 73 │        ESTABLISHMENT-PARAMETER  NULL
 74 │        MODIFICATION-INITIATOR   TRUE
 75 │        TERMINATION-INITIATOR    TRUE }
 76 │      ROLE-B { -- shadow consumer role
 77 │        ESTABLISHMENT-INITIATOR  TRUE
 78 │        ESTABLISHMENT-PARAMETER  NULL
 79 │        MODIFICATION-INITIATOR   TRUE
 80 │        MODIFICATION-PARAMETER   ModificationParameter
 81 │        TERMINATION-INITIATOR    TRUE}
 82 │    ID                    id-op-binding-shadow }
 84 │  -- types
    │
────╯
