rasn-compiler-tests/tests/snapshots/parse_test__parses_modules@itu-t_x_x530_2005_DirectoryManagement.asn1.snap
---
source: rasn-compiler-tests/tests/parse_test.rs
input_file: rasn-compiler-tests/tests/modules/itu-t_x_x530_2005_DirectoryManagement.asn1
---
Error matching ASN syntax at while parsing:
     ╭─[line 346, column 2]
     │
     │ 
 346 │  id-mat-requestCounter OBJECT IDENTIFIER ::= { ::= {id-mat 86} ◀▪▪▪▪▪▪▪▪▪▪ FAILED AT THIS LINE
     │
─────╯
